Adapt OpenJDK source and jtreg testing